--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gitBase101</title>
+    <meta name="description" content="gitBase101">
+    <meta name="author" content="gitBase101">
+    <!--seo-->
+    <meta property="og:title" content="gitBase101 -  Git & GitHub Webinar">
+    <meta property="og:description" content="gitBase101">
+    <meta property="og:url" content="https://madushas.github.io/gitBase101">
+    <meta property="og:site_name" content="gitBase101 -  Git & GitHub Webinar">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://madushas.github.io/gitBase101/img/GitBase.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://madushas.github.io/gitBase101">
+    <meta name="twitter:creator" content="@_MadushaS">
+    <meta name="twitter:title" content="gitBase101 -  Git & GitHub Webinar">
+    <meta name="twitter:description" content="gitBase101">
+    <meta name="twitter:image" content="https://madushas.github.io/gitBase101/img/GitBase.jpg">
+    <meta name="twitter:image:alt" content="gitBase101">
+    <link rel="canonical" href="https://madushas.github.io/gitBase101">
+
 </head>
 <body>
     <script>
