--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gitBase101</title>
-    <meta name="description" content="gitBase101">
     <meta name="author" content="gitBase101">
+    <meta name="description" content="A wonderful chance to learn how to ease your developments using GIT and GitHub . 🖥 _gitBase101 - BASICS OF GIT ✨ A webinar conducted by Mr. Madusha Sandaruwan, a computer science undergraduate and a Full Stack Developer">
     <!--seo-->
     <meta property="og:title" content="gitBase101 -  Git & GitHub Webinar">
-    <meta property="og:description" content="gitBase101">
+    <meta property="og:description" content="A wonderful chance to learn how to ease your developments using GIT and GitHub . 🖥 _gitBase101 - BASICS OF GIT ✨ A webinar conducted by Mr. Madusha Sandaruwan, a computer science undergraduate and a Full Stack Developer"">
     <meta property="og:url" content="https://madushas.github.io/gitBase101">
     <meta property="og:site_name" content="gitBase101 -  Git & GitHub Webinar">
     <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
     <meta name="twitter:site" content="https://madushas.github.io/gitBase101">
     <meta name="twitter:creator" content="@_MadushaS">
     <meta name="twitter:title" content="gitBase101 -  Git & GitHub Webinar">
-    <meta name="twitter:description" content="gitBase101">
+    <meta name="twitter:description" content="A wonderful chance to learn how to ease your developments using GIT and GitHub . 🖥 _gitBase101 - BASICS OF GIT ✨ A webinar conducted by Mr. Madusha Sandaruwan, a computer science undergraduate and a Full Stack Developer"">
     <meta name="twitter:image" content="https://madushas.github.io/gitBase101/img/GitBase.jpg">
     <meta name="twitter:image:alt" content="gitBase101">
     <link rel="canonical" href="https://madushas.github.io/gitBase101">
