--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
 
 </head>
 <body>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyAgcAQM7_FM2IFKIFG2xBGH2E6SaUkQQzE",
+          authDomain: "githits-b43e6.firebaseapp.com",
+          projectId: "githits-b43e6",
+          storageBucket: "githits-b43e6.appspot.com",
+          messagingSenderId: "85045737943",
+          appId: "1:85045737943:web:089ccfbfb6f782c026f392",
+          measurementId: "G-9YDML8LXJ3"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
     <script>
         window.location.href = "https://us05web.zoom.us/j/81731519016?pwd=OEx0NWpxa0JGblk4U0pDT1l2SFRjUT09";
     </script>
