--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+        import { database } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js";
         // TODO: Add SDKs for Firebase products that you want to use
         // https://firebase.google.com/docs/web/setup#available-libraries
       
@@ -47,6 +48,15 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
+        const database = getDatabase(app);
+        const ref = ref(database);
+        const hitsRef = ref.child('hits');
+        const newHitsRef = push(hitsRef);
+        let hitsC = hitsRef++;
+        set(newHitsRef, {
+          hits: hitsC
+        });
+
       </script>
     <script>
         window.location.href = "https://us05web.zoom.us/j/81731519016?pwd=OEx0NWpxa0JGblk4U0pDT1l2SFRjUT09";
